<resources>
    <string name="app_name">Restaurant App</string>

    <string name="restaurant_app">Restaurant APP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>

    <string name="title_activity_menu_content">MenuContent</string>

    <string name="name">Name: </string>
    <string name="menu_id">Menu ID: </string>
    <string name="category">Category: </string>
    <string name="total_cost">Total Cost: </string>
    <string name="alternative_name">Alt Name: </string>
    <string name="gst">GST: </string>
    <string name="dollar">$</string>
    <string name="order">Order: </string>
    <string name="table">Table: </string>

    <string name="item_order_cost">COST</string>


    <string name="dialog_new_order_title">Add Booking</string>
    <string name="dialog_new_order_order_name">Booking Time, Date, Name</string>

    <string name="content_order_create_item_title">Create Order</string>
    <string name="content_order_create_item_dish_name">Dish Name</string>
    <string name="content_order_create_item_altName">Alternative Name</string>
    <string name="content_order_create_item_cost">Cost</string>
    <string name="content_order_create_item_order_number">Order Number</string>
    <string name="content_order_create_item_number_takeaway">Table Number/Take Away (-)</string>



    <string name="title_activity_new_order_list">NewOrderList</string>
    <string name="content_new_order_list_order_number">Order Number: </string>
    <string name="content_new_order_list_table_number_takeaway">Table Number/Take Away (-): </string>
    <string name="content_new_order_list_total_cost">Total Cost: </string>
    <string name="content_new_order_list_cancel_order_button">Cancel Order</string>

    <string name="new_order_list_item_table_takeaway">Table/Take Away</string>
    <string name="new_order_list_item_table_takeaway_number">Number:</string>
    <string name="new_order_list_item_dishes">Dishes: </string>
    <string name="new_order_list_item_total">Total $</string>



    <string name="create_button">Create</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="update_button">Update</string>
    <string name="add_button">Add</string>

    <string name="content_menu_context_category">Category:</string>

    <string name="content_booking_edit_item">Edit New Bookings</string>

    <string name="content_menu_add_item_title">Add to Firebase</string>
    <string name="content_menu_add_item_name">Enter Name</string>
    <string name="content_menu_add_item_alt_name">Enter Alternative Name</string>
    <string name="content_menu_add_item_menu_id">Enter Menu ID</string>
    <string name="content_menu_add_item_category">Enter Category</string>
    <string name="content_menu_add_item_total_cost">Enter Total Cost Amount</string>
    <string name="content_menu_add_item_gst">Enter GST Amount</string>
    <string name="content_menu_add_item_description">Enter Description</string>
    <string name="content_menu_add_item_ingredients">Enter Ingredients</string>

    <string name="activity_main_drawer_menu">Menu</string>
    <string name="activity_main_drawer_order">Order</string>
    <string name="activity_main_drawer_systems">Systems</string>
    <string name="activity_main_drawer_signout">Sign Out</string>

    <string name="content_main_title">Booking</string>


    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu_new_item">MenuNewItem</string>
    <string name="title_activity_menu_add_item">MenuAddItem</string>
    <string name="title_activity_order_adapter">OrderAdapter</string>
    <string name="title_activity_order_create_item">OrderCreateItem</string>
    <string name="title_activity_order_content">OrderContent</string>
    <string name="title_activity_booking_edit_item">BookingEditItem</string>

</resources>
