<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mad.restaurantapp.UI.MenuAddItem"
    tools:showIn="@layout/activity_menu_add_item">

    <TextView
        android:id="@+id/content_new_menu_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_menu_add_item_title"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_new_menu_item_title"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/content_menu_add_item_name_string"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/content_menu_add_item_name" />

        <EditText
            android:id="@+id/content_menu_add_item_alt_name_string"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/content_menu_add_item_alt_name" />

        <EditText
            android:id="@+id/content_menu_add_item_menu_id_int"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/content_menu_add_item_menu_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/content_menu_add_item_category_string"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/content_menu_add_item_category" />

        <EditText
            android:id="@+id/content_menu_add_item_total_cost_int"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/content_menu_add_item_total_cost"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/content_menu_add_item_gst_int"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/content_menu_add_item_gst"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/content_menu_add_item_description_string"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/content_menu_add_item_description" />

        <EditText
            android:id="@+id/content_menu_add_item_ingredients_string"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/content_menu_add_item_ingredients" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/content_menu_add_item_add_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/content_menu_add_item_cancel_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/cancel_button" />

    </LinearLayout>


</RelativeLayout>
