<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_new_order_title"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/dialog_new_order_order_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_new_order_order_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_new_order_add_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/dialog_new_order_cancel_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/cancel_button" />

    </LinearLayout>

</LinearLayout>