<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mad.restaurantapp.UI.BookingEditItem"
    tools:showIn="@layout/activity_booking_edit_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="140dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/content_booking_edit_item_booking_detail_string"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/content_booking_edit_item" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/content_booking_edit_item_update_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/update_button" />

            <Button
                android:id="@+id/content_booking_edit_item_delete_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/delete_button" />

            <Button
                android:id="@+id/content_booking_edit_item_cancel_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/cancel_button" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
